--- a/style.css
+++ b/style.css
@@ -169,6 +169,11 @@ footer {
   font-size: 16px;
   line-height: 19.09px;
 }
+.policy a {
+  text-decoration-line: none;
+  color: #e5e7eb;
+}
+
 .company,
 .policy,
 .sns {
